# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-03-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed bug when using 'clone movie' function on filtered treeview.
	* When using quick filter, 'all movies' filter on menu should be checked. Fixed.

2006-03-05 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed bug when searching movie titles containing polish characters
	* Update volume/collection data after creating new database

2006-03-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* After deleting a movie, last row is now selected on main treeview
	* Minor fixes to Allocine and 7arte movie plugins
	* Portuguese translation updated.
	* Quick filter not always working as expected. This is fixed now.
	* When loaning/returning a movie wrong row is selected. Fixed.

2006-03-04 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed displaing movie info before initialization (tags problem)
	* Fixed wrong poster path in cloned movie
	* Clone movie function copies tag/lang data now
	* Console search can now use multiple options
	* Some code cleanups
	* Added some tooltips to poster buttons
	* Polish translation updated

2006-03-03 Vasco Nunes <vasco.m.nunes@gmail.com>
	* IMDB changed the way posters are included in html. Plugin fixed.
	* Added custom fonts selection for PDF reports.
	* Fixed bug when adding new collections.

2006-03-03 Piotr Ozarowski <ozarow@gmail.com>
	* New tag/language/volume/collection name must be unique
	* Volume/collection ids dictionary is filled only if needed
	* Changed behaviour of poster preview and add movie window
	* Fixed bug when restoring data
	* Removal of any movie language is now possible (not just last one)
	* Stopklatka movie plugin updated
	* Onet Film movie plugin updated

2006-03-01 Vasco Nunes <vasco.m.nunes@gmail.com>
	* French and portuguese translations updated to match current revision
	* Added a new french movie plugin - Allocine (Thanks to Pierre-Luc Lévy)

2006-02-28 Piotr Ozarowski <ozarow@gmail.com>