@@ -7,6 +7,7 @@ Griffith ChangeLog
 2006-03-05 Vasco Nunes <vasco.m.nunes@gmail.com>
 	* Fixed bug when using 'clone movie' function on filtered treeview.
 	* When using quick filter, 'all movies' filter on menu should be checked. Fixed.
+	* Posters are now saved to the system temp dir and only moved to posters dir when the movie is really commited to db.
 
 2006-03-05 Piotr Ozarowski <ozarow@gmail.com>
 	* Fixed bug when searching movie titles containing polish characters
